@@ -21,12 +21,13 @@
   + ManageMessage: New function: M_OUT
   + ManageVariable: New macro: CMAKE_FEDORA_CONF_GET_ALL_VARIABLES
 - Removed:
+  + cmake-fedora.conf.in is no longer need.
+  + TODO should be put in wiki.  
   + Targets:
     - changelog_prev_update: 
   + Scripts:
     - cmake-fedora-functions is no longer needed.
     - cmake-fedora-changelog is no longer needed.
-  + cmake-fedora.conf.in is no longer need.  
   + Variables:
     - PRJ_RPM_SPEC_FILE
 - Changed:
